delete html linter

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -5,4 +5,8 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Layout Designer Project 3
     link(rel="stylesheet", href="styles/style.css")
-  body
+  body.vh-100
+    .container.h-100
+      .row.h-100
+        aside.col-md-4.bg-secondary.h-100
+        main.col-md-8.bg-primary.h-100
