add main layout

--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -5,8 +5,10 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Layout Designer Project 3
     link(rel="stylesheet", href="styles/style.css")
-  body.vh-100
-    .container.h-100
-      .row.h-100
-        aside.col-md-4.bg-secondary.h-100
-        main.col-md-8.bg-primary.h-100
+  body.bg-gray
+    .container-xxl.vh-100.p-0.p-md-4
+      .wrapper.row.h-100.gx-0.rounded-md
+        .main-area.col-md-4.h-100.d-flex.flex-column-reverse.flex-md-column
+          include components/header.pug
+          .flex-grow-1.bg-light.border-end.pt-3.px-4
+        .desktop-area.col-md-8.h-100.bg-light
