--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -19,3 +19,8 @@ $theme-colors: (
   "light":      $light,
   "dark":       $dark
 );
+
+$border-color: $gray;
+$border-radius: 1rem;
+
+$enable-shadows: true
