--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -6,6 +6,18 @@
 // // Required
 @import "../../node_modules/bootstrap/scss/variables";
 @import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/maps";
+@import "../../node_modules/bootstrap/scss/utilities";
 
+@import "./utilities/utilities";
 // // Optional Bootstrap components
 @import "../../node_modules/bootstrap/scss/bootstrap";
+
+
+@import "./components/header.scss";
+
+@import "./main-area";
+
+.wrapper {
+  overflow: hidden;
+}
