some fixes contacts

--- a/app/pages/components/contacts/contacts.pug
+++ b/app/pages/components/contacts/contacts.pug
@@ -3,7 +3,7 @@ include data.pug
 h2.h2.mb-4 Контакты
 input.form-control-plaintext.border-bottom.p-4(type="text", placeholder="Поиск по контактам")
 each contacts, letter in data
+  p.mt-5.text-muted= letter
   each contactData in contacts
     - const { name, status, avatar } = contactData;
-    p.mt-5.mb-3.text-muted= letter
     +contact(name, status, avatar)
