--- a/app/pages/components/contacts.pug
+++ b/app/pages/components/contacts.pug
@@ -35,3 +35,11 @@
       avatar: "/images/avatar_6.jpg"
     }],
   }
+
+h2.h2.mb-4 Контакты
+input.form-control-plaintext.border-bottom.p-4(type="text", placeholder="Поиск по контактам")
+each contacts, letter in data
+  p.mt-5.text-muted= letter
+  each contactData in contacts
+    - const { name, status, avatar } = contactData;
+    +contact(name, status, avatar)
