--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -6,8 +6,8 @@ block header
 block chat
   | Чат с котиками
 block contacts
-  include components/contacts/contacts
+  include components/contacts
 block profile
   | Мой профиль
 block desktop-area
-  include components/greeting-card.pug
+  include components/greeting-card
