--- a/app/pages/components/greeting-card.pug
+++ b/app/pages/components/greeting-card.pug
@@ -1,4 +1,4 @@
-.border-0.text-center
+.text-center
   img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200px" height="auto")
   .card-body
     h6.mb-0.mt-3 Привет, Кодовёнок
