--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -4,7 +4,7 @@ block header
   include components/header
 
 block chat
-  | Чат с котиками
+  include components/messages
 block contacts
   include components/contacts
 block profile
