--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -17,6 +17,7 @@
 
 @import "./components/header";
 @import "./components/contact";
+@import "./components/message.scss";
 @import "./components/avatar";
 @import "./components/scrollable";
 
