--- a/app/scss/components/contact.scss
+++ b/app/scss/components/contact.scss
@@ -30,16 +30,18 @@
     color: map.get($theme-colors, 'secondary');
   }
 
-  &:hover {
-    background-color: map.get($theme-colors, "primary");
-    cursor: pointer;
+  @media (any-hover: hover) {
+    &:hover {
+      background-color: map.get($theme-colors, "primary");
+      cursor: pointer;
 
-    .contact-name {
-      color: map.get($theme-colors, "light");
-    }
+      .contact-name {
+        color: map.get($theme-colors, "light");
+      }
 
-    .contact-status {
-      color: map.get($theme-colors, "gray");
+      .contact-status {
+        color: map.get($theme-colors, "gray");
+      }
     }
   }
 }
