add profile and some ref

--- a/app/pages/components/contacts.pug
+++ b/app/pages/components/contacts.pug
@@ -37,7 +37,7 @@
   }
 
 h2.h2.mb-4 Контакты
-input.form-control-plaintext.border-bottom.p-4(type="text", placeholder="Поиск по контактам")
++search-form("Поиск по контактам")
 each contacts, letter in data
   p.mt-5.text-muted= letter
   each contactData in contacts
