--- a/app/pages/components/greeting-card.pug
+++ b/app/pages/components/greeting-card.pug
@@ -1,5 +1,4 @@
 .text-center
   img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200px" height="auto")
-  .card-body
-    h6.mb-0.mt-3 Привет, Кодовёнок
-    p.text-secondary.small Выбери чат, чтобы начать общаться
+  h6.mt-3.mb-1 Привет, Кодовёнок
+  p.text-secondary.fs-7 Выбери чат, чтобы начать общаться
