--- a/app/pages/components/header.pug
+++ b/app/pages/components/header.pug
@@ -1,15 +1,15 @@
 nav.navbar.header.bg-primary.p-3
-  +icon("logo")
+  +icon("logo", "25px", "25px")
   ul.nav.small.text-light
     li.nav-item
       a.nav-link.flex-fill(href="#contacts")
-        +icon("people")(class="me-2")
+        +icon("people", "25px")(class="me-2")
         span.d-none.d-xxl-inline Контакты
     li.nav-item
       a.nav-link(href="#chats")
-        +icon("chat")(class="me-2")
+        +icon("chat", "25px")(class="me-2")
         span.d-none.d-xxl-inline Сообщения
     li.nav-item
       a.nav-link(href="#profile")
-        +icon("person")(class="me-2")
+        +icon("person", "25px")(class="me-2")
         span.d-none.d-xxl-inline Профиль
