--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -8,6 +8,6 @@ block chat
 block contacts
   include components/contacts
 block profile
-  | Мой профиль
+  include components/profile
 block desktop-area
   include components/greeting-card
