--- a/app/pages/components/greeting-card.pug
+++ b/app/pages/components/greeting-card.pug
@@ -1,4 +1,5 @@
-.text-center
-  img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200px" height="auto")
-  h6.mt-3.mb-1 Привет, Кодовёнок
-  p.text-secondary.fs-7 Выбери чат, чтобы начать общаться
+.desktop-area.d-none.d-lg-flex.justify-content-center.align-items-center.col-lg-8.h-100.bg-light
+  .text-center
+    img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200px" height="auto")
+    h6.mt-3.mb-1 Привет, Кодовёнок
+    p.text-secondary.fs-7 Выбери чат, чтобы начать общаться
