--- a/app/pages/components/messages.pug
+++ b/app/pages/components/messages.pug
@@ -19,8 +19,9 @@
     }
   ];
 
-h2.h2.mb-4 Сообщения
-+search-form('Поиск по сообщениям')
-each messageData in messagesData
-  - const { name, message, time, avatar } = messageData;
-  +message(name, message, time, avatar)
+#messages.pt-5.px-4.d-none
+  h2.h2.mb-4 Чаты
+  +search-form('Поиск по сообщениям')
+  each messageData in messagesData
+    - const { name, message, time, avatar } = messageData;
+    +message(name, message, time, avatar)
