--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -3,11 +3,11 @@ extends layout/layout
 block header
   include components/header
 
-block chat
+block messages
   include components/messages
 block contacts
   include components/contacts
 block profile
   include components/profile
 block desktop-area
-  include components/greeting-card
+    include components/greeting-card
