--- a/app/pages/mixins/contact.pug
+++ b/app/pages/mixins/contact.pug
@@ -1,5 +1,5 @@
 mixin contact(name, status, avatar)
-  a.contact.mb-3
+  a.contact.contact-hover.shadow-sm.mb-3
     img.avatar(src=avatar, alt="")
     .contact-body
       p.contact-name= name
