--- a/app/scss/variables.scss
+++ b/app/scss/variables.scss
@@ -40,7 +40,7 @@ $container-max-widths: (
 );
 
 // Layout
-$border-color: $gray;
+// $border-color: $gray;
 $border-radius: 1rem;
 $enable-shadows: true;
 
