--- a/app/pages/components/header.pug
+++ b/app/pages/components/header.pug
@@ -1,12 +1,13 @@
 nav.navbar.header.bg-primary.p-3
   +icon("logo", "25px", "25px")
   ul.nav.small.text-light
+    block chat
     li.nav-item
       a.nav-link.flex-fill(href="#contacts")
         +icon("people", "25px")(class="me-2")
         span.d-none.d-xxl-inline Контакты
     li.nav-item
-      a.nav-link(href="#chats")
+      a.nav-link(href="#messages")
         +icon("chat", "25px")(class="me-2")
         span.d-none.d-xxl-inline Сообщения
     li.nav-item
