--- a/app/pages/mixins/search-form.pug
+++ b/app/pages/mixins/search-form.pug
@@ -1,3 +1,3 @@
 mixin search-form(placeholder)
-  form
+  form.mb-5
     input.form-control-plaintext.border-bottom.p-4(type="text", placeholder= placeholder)
