--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -1,9 +1,9 @@
-a.contact.bg-light.border-bottom.sticky-top.py-4.px-3.mb-5
+a.contact.bg-light.border-bottom.sticky-top.py-4.px-3
   img.avatar(src="images/avatar_1.jpg", alt="")
   .contact-body
     p.contact-name= "Вениамин Редакторович"
     p.contact-status= "Онлайн"
-.px-5.h-100
+.px-5.pt-5.scrollable
   +incoming(
     "Вениамин Редакторович",
      "Да, я уже вышел и минут через 20-30 буду у тебя. Поеду на трамвае и потом в магазин. Тебе что-то захватить?",
@@ -20,3 +20,7 @@ a.contact.bg-light.border-bottom.sticky-top.py-4.px-3.mb-5
   +outbound("А, слушай, купи мне ещё Macbook Pro. А то хочется работать в Хекслете, а там это условие",
    "3 минут назад",
    "images/avatar_1.jpg")
+.mx-lg-5.py-3.px-4.d-flex.align-items-center.border-top
+  span.text-secondary.me-auto Напишите сообщение...
+  .sendIcon
+    +icon("cursor", "20px")
