--- a/app/pages/components/contacts.pug
+++ b/app/pages/components/contacts.pug
@@ -36,7 +36,7 @@
     }],
   }
 
-#contacts.pt-5.px-4.d-none
+#contacts.pt-5.px-4.d-none.scrollable
   h2.h2.mb-4 Контакты
   +search-form("Поиск по контактам")
   each contacts, letter in contactsData
