--- a/app/pages/components/messages.pug
+++ b/app/pages/components/messages.pug
@@ -19,7 +19,7 @@
     }
   ];
 
-#messages.pt-5.px-4.d-none
+#messages.pt-5.px-4.d-none.scrollable
   h2.h2.mb-4 Чаты
   +search-form('Поиск по сообщениям')
   each messageData in messagesData
