--- a/app/pages/chat.pug
+++ b/app/pages/chat.pug
@@ -1,7 +1,7 @@
 extends layout/layout
 
 block header
-  include components/header-chat
+  include components/nav-chat
 
 block chat
   include components/mobile-chat
