--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -1,9 +1,9 @@
-a.contact.bg-light.border-bottom.sticky-top.py-4.px-3
+a.contact.sticky-top.bg-light.border-bottom.py-4.px-3
   img.avatar(src="images/avatar_1.jpg", alt="")
   .contact-body
     p.contact-name= "Вениамин Редакторович"
     p.contact-status= "Онлайн"
-.px-5.pt-5.scrollable
+.flex-grow-1.px-5.pt-5.scrollable
   +incoming(
     "Вениамин Редакторович",
      "Да, я уже вышел и минут через 20-30 буду у тебя. Поеду на трамвае и потом в магазин. Тебе что-то захватить?",
