--- a/app/pages/components/desktop-chat.pug
+++ b/app/pages/components/desktop-chat.pug
@@ -1,2 +1,2 @@
-.col-lg-8.h-100.d-none.bg-light.d-lg-flex.flex-lg-column.justify-content-lg-between
+.col-lg-8.h-100.d-none.bg-light.d-lg-flex.flex-lg-column
   include chat
