--- a/app/pages/components/mobile-chat.pug
+++ b/app/pages/components/mobile-chat.pug
@@ -1,2 +1,3 @@
-#current-chat.d-none.flex-column.scrollable
-  include chat
+.h-100.d-lg-none.tab-pane.fade(id='current-chat' role='tabpanel' aria-labelledby='nav-current-chat-tab')
+  .h-100.d-flex.flex-column
+    include chat
