--- a/app/pages/components/profile.pug
+++ b/app/pages/components/profile.pug
@@ -1,4 +1,4 @@
-#profile.pt-5.px-4.d-none.scrollable
+.h-100.pt-5.px-4.scrollable.tab-pane.fade(id='profile' role='tabpanel' aria-labelledby='nav-profile-tab')
   h2.h2.mb-4 Профиль
   +search-form('Поиск по сообщениям')
   figure.text-center.p-3.mb-5
