--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -1,7 +1,7 @@
 extends layout/layout
 
 block header
-  include components/header
+  include components/nav
 
 block messages
   include components/messages
@@ -10,4 +10,4 @@ block contacts
 block profile
   include components/profile
 block desktop-area
-    include components/greeting-card
+  include components/greeting-card
