--- a/app/pages/layout/layout.pug
+++ b/app/pages/layout/layout.pug
@@ -1,18 +1,20 @@
 include ../mixins/mixins
 doctype html
-html(lang="ru")
+html.h-100(lang="ru")
   head
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Layout Designer Project 3
     link(rel="stylesheet", href="styles/style.css")
-  body.bg-gray.svh-100
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  body.bg-gray.h-100
     .container-xxl.p-0.p-md-4.h-100
-      .row.h-100.gx-0
+      .row.h-100.gx-0.rounded-md.overflow-hidden
         .main-area.col-lg-4.d-flex.flex-column-reverse.flex-lg-column.bg-light.border-end-lg.h-100
           block header
-          block chat
-          block messages
-          block contacts
-          block profile
+          .h-100.scrollable.tab-content(id='nav-tabContent')
+            block chat
+            block messages
+            block contacts
+            block profile
         block desktop-area
