some fixes for tests

--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -1,4 +1,4 @@
-a.contact.sticky-top.bg-light.border-bottom.py-4.px-3
+a.contact.sticky-top.border-bottom.py-4.px-3
   img.avatar(src="images/avatar_1.jpg", alt="")
   .contact-body
     p.contact-name= "Вениамин Редакторович"
