--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -3,8 +3,8 @@ extends layout/layout
 block header
   include components/nav
 
-block messages
-  include components/messages
+block dialogs
+  include components/dialogs
 block contacts
   include components/contacts
 block profile
