--- a/app/pages/chat.pug
+++ b/app/pages/chat.pug
@@ -5,8 +5,8 @@ block header
 
 block chat
   include components/mobile-chat
-block messages
-  include components/messages
+block dialogs
+  include components/dialogs
 block contacts
   include components/contacts
 block profile
