--- a/app/pages/components/dialogs.pug
+++ b/app/pages/components/dialogs.pug
@@ -1,5 +1,5 @@
 -
-  const messagesData = [{
+  const dialogsData = [{
       name: "Вениамин Редакторович",
       message: "o_O",
       time: "11:45",
@@ -19,9 +19,9 @@
     }
   ];
 
-.flex-grow-1.pt-5.px-4.scrollable.tab-pane.fade(id='chats' role='tabpanel' aria-labelledby='nav-chats-tab')
+.flex-grow-1.pt-5.px-4.scrollable.tab-pane.fade.active.show(id='chats' role='tabpanel' aria-labelledby='nav-chats-tab')
   h2.h2.mb-4 Чаты
   +search-form('Поиск по сообщениям')
-  each messageData in messagesData
-    - const { name, message, time, avatar } = messageData;
+  each dialogData in dialogsData
+    - const { name, message, time, avatar } = dialogData;
     +message(name, message, time, avatar)
