--- a/app/pages/layout/layout.pug
+++ b/app/pages/layout/layout.pug
@@ -9,12 +9,12 @@ html.h-100(lang="ru")
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   body.bg-gray.h-100
     .container-xxl.p-0.p-md-4.h-100
-      .row.h-100.gx-0.rounded-md.overflow-hidden
-        .main-area.col-lg-4.d-flex.flex-column-reverse.flex-lg-column.bg-light.border-end-lg.h-100
+      .row.h-100.gx-0.bg-white.rounded-md.overflow-hidden
+        .main-area.col-lg-4.d-flex.flex-column-reverse.flex-lg-column.border-end-lg.h-100
           block header
           .h-100.scrollable.tab-content(id='nav-tabContent')
             block chat
-            block messages
+            block dialogs
             block contacts
             block profile
         block desktop-area
