some fixes for test

--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -1,5 +1,5 @@
-a.contact.sticky-top.border-bottom.py-4.px-3
-  img.avatar(src="images/avatar_1.jpg", alt="")
+a.contact.sticky-top.border-bottom.px-3
+  img.avatar(src="images/avatar_4.jpg", alt="")
   .contact-body
     p.contact-name= "Вениамин Редакторович"
     p.contact-status= "Онлайн"
