--- a/app/pages/components/dialogs.pug
+++ b/app/pages/components/dialogs.pug
@@ -24,4 +24,4 @@
   +search-form('Поиск по сообщениям')
   each dialogData in dialogsData
     - const { name, message, time, avatar } = dialogData;
-    +message(name, message, time, avatar)
+    +dialog(name, message, time, avatar)
