--- a/app/pages/mixins/dialog.pug
+++ b/app/pages/mixins/dialog.pug
@@ -1,4 +1,4 @@
-mixin message(name, message, time, avatar)
+mixin dialog(name, message, time, avatar)
   a.message.mb-3
     .message-avatar
       img.avatar(src=avatar, alt="")
