--- a/app/pages/components/nav.pug
+++ b/app/pages/components/nav.pug
@@ -1,16 +1,16 @@
 nav.navbar.header.bg-primary.p-3
-  +icon("logo", "25px", "25px")
-  ul.nav.small.text-light
+  +icon("logo", "25px")(class="me-4")
+  ul.nav.small.text-light.d-flex.justify-content-md-between.justify-content-end.flex-grow-1
     block chat
     li.nav-item
-      a.nav-link.flex-fill(href="#contacts" data-bs-toggle="tab" data-bs-target="#contacts")
+      a.nav-link.pe-md-0(href="#contacts" data-bs-toggle="tab" data-bs-target="#contacts")
         +icon("people", "25px")(class="me-2")
-        span.d-none.d-xxl-inline Контакты
+        span.d-none.d-md-inline Контакты
     li.nav-item
-      a.nav-link(href="#chats" data-bs-toggle="tab" data-bs-target="#chats")
+      a.nav-link.pe-md-0(href="#chats" data-bs-toggle="tab" data-bs-target="#chats")
         +icon("chat", "25px")(class="me-2")
-        span.d-none.d-xxl-inline Сообщения
+        span.d-none.d-md-inline Сообщения
     li.nav-item
       a.nav-link(href="#profile" data-bs-toggle="tab" data-bs-target="#profile")
         +icon("person", "25px")(class="me-2")
-        span.d-none.d-xxl-inline Профиль
+        span.d-none.d-md-inline Профиль
