--- a/app/pages/mixins/in-out-messages.pug
+++ b/app/pages/mixins/in-out-messages.pug
@@ -1,7 +1,7 @@
 mixin incoming(name, text, timeAgo, avatarPath)
   .d-flex.align-items-end.gap-3.mb-3.w-lg-75
     img.avatar(src=avatarPath, alt="").d-none.d-lg-block
-    .bg-gray.p-4.rounded.shadow-sm
+    .bg-light.p-4.rounded.shadow-sm
       .fw-bold.mb-1= name
       .text-secondary.pb-2= text
       .border-top.small.text-secondary.opacity-75.pt-1= timeAgo
@@ -9,6 +9,6 @@ mixin incoming(name, text, timeAgo, avatarPath)
 mixin outbound(text, timeAgo, avatarPath)
   .d-flex.align-items-end.gap-3.mb-3.w-lg-75.ms-auto
     img.avatar(src=avatarPath, alt="").d-none.d-lg-block
-    .bg-gray.p-4.bg-primary.rounded.shadow-sm
+    .p-4.bg-primary.rounded.shadow-sm
       .text-light.pb-2= text
       .border-top.small.text-white.opacity-75.pt-1= timeAgo
