--- a/app/pages/layout/layout.pug
+++ b/app/pages/layout/layout.pug
@@ -6,7 +6,6 @@ html.h-100(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title Layout Designer Project 3
     link(rel="stylesheet", href="styles/style.css")
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   body.bg-gray.h-100
     .container-xxl.p-0.p-md-4.h-100
       .row.h-100.gx-0.bg-white.rounded-md.overflow-hidden
@@ -18,3 +17,4 @@ html.h-100(lang="ru")
             block contacts
             block profile
         block desktop-area
+  <script src="js/bootstrap.min.js"></script>
