fix bootstrap navigation

--- a/app/pages/chat.pug
+++ b/app/pages/chat.pug
@@ -6,9 +6,9 @@ block header
 block chat
   include components/mobile-chat
 block dialogs
-  include components/dialogs
+  include components/dialogs-chat
 block contacts
-  include components/contacts
+  include components/contacts-chat
 block profile
   include components/profile
 block desktop-area
