--- a/app/pages/index.pug
+++ b/app/pages/index.pug
@@ -1,12 +1,12 @@
 extends layout/layout
 
 block header
-  include components/nav
+  include components/nav-index
 
 block dialogs
-  include components/dialogs
+  include components/dialogs-index
 block contacts
-  include components/contacts
+  include components/contacts-index
 block profile
   include components/profile
 block desktop-area
