--- a/app/pages/components/nav-chat.pug
+++ b/app/pages/components/nav-chat.pug
@@ -11,3 +11,9 @@ block dialogs
       +icon("chat", "25px")(class="me-2")
       span.d-none.d-md-inline Сообщения
 
+block contacts
+    li.nav-item
+      a.nav-link.pe-md-0(href="#contacts" data-bs-toggle="tab" data-bs-target="#contacts")
+        +icon("people", "25px")(class="me-2")
+        span.d-none.d-md-inline Контакты
+
