some linter fixes

--- a/app/pages/components/chat.pug
+++ b/app/pages/components/chat.pug
@@ -22,5 +22,5 @@ a.contact.sticky-top.border-bottom.px-3
    "images/avatar_1.jpg")
 .mx-lg-5.py-3.px-4.d-flex.align-items-center.border-top
   span.text-secondary.me-auto Напишите сообщение...
-  .sendIcon
+  .send-icon
     +icon("cursor", "20px")
