--- a/app/scss/app.scss
+++ b/app/scss/app.scss
@@ -1,31 +1,20 @@
 @import "../../node_modules/bootstrap/scss/functions";
-
-
 @import "../../node_modules/bootstrap/scss/variables";
 
 // Default variable overrides
-@import "./variables.scss";
+@import "./variables";
 
 // Required
 @import "../../node_modules/bootstrap/scss/mixins";
 @import "../../node_modules/bootstrap/scss/maps";
 @import "../../node_modules/bootstrap/scss/utilities";
-
 @import "./utilities/utilities";
+
 // // Optional Bootstrap components
 @import "../../node_modules/bootstrap/scss/bootstrap";
-
 @import "mixins/mixins";
-
 @import "./components/contact";
 @import "./components/message";
 @import "./components/avatar";
-@import "./components/sendIcon";
-
-.icon {
-  fill: $light;
-}
-
-.scrollable {
-  @include hide-scrollbar();
-}
+@import "./components/icons";
+@import "./components/scrollable";
