--- a/app/scss/utilities/utilities.scss
+++ b/app/scss/utilities/utilities.scss
@@ -13,7 +13,7 @@ $utilities-names: "rounded"
   "width";
 
 @each $utility-name in $utilities-names {
-  $utilities: map-merge(
+  $utilities: map.merge(
     $utilities,
     (
       #{$utility-name}: (
@@ -23,7 +23,7 @@ $utilities-names: "rounded"
   );
 }
 
-$utilities: map-merge(
+$utilities: map.merge(
   $utilities,
   (
     "small-viewport-height": (
