--- a/app/pages/layout/layout.pug
+++ b/app/pages/layout/layout.pug
@@ -9,7 +9,7 @@ html.h-100(lang="ru")
   body.bg-gray.h-100
     .container-xxl.p-0.p-md-4.h-100
       .row.h-100.gx-0.bg-white.rounded-md.overflow-hidden
-        .main-area.col-lg-4.d-flex.flex-column-reverse.flex-lg-column.border-end-lg.h-100
+        .main-area.col-md-5.col-lg-4.d-flex.flex-column-reverse.flex-md-column.border-end-md.h-100
           block header
           .h-100.scrollable.tab-content(id='nav-tabContent')
             block chat
