--- a/app/pages/components/greeting-card.pug
+++ b/app/pages/components/greeting-card.pug
@@ -1,4 +1,4 @@
-.desktop-area.d-none.d-lg-flex.justify-content-center.align-items-center.col-lg-8.h-100
+.desktop-area.d-none.d-md-flex.col-md-7.col-lg-8.justify-content-center.align-items-center.h-100
   .text-center
     img.mx-auto.d-block.rounded-pill(src="images/avatar_1.jpg", alt="" width="200px" height="auto")
     h6.mt-3.mb-1 Привет, Кодовёнок
