--- a/app/pages/components/nav-index.pug
+++ b/app/pages/components/nav-index.pug
@@ -4,10 +4,10 @@ block dialogs
   li.nav-item
     a.nav-link.pe-md-0(href="#chats" data-bs-toggle="tab" data-bs-target="#chats")
       +icon("chat", "25px")(class="me-2")
-      span.d-none.d-md-inline Сообщения
+      span.d-none.d-xl-inline Сообщения
 
 block contacts
     li.nav-item
       a.nav-link.active.pe-md-0(href="#contacts" data-bs-toggle="tab" data-bs-target="#contacts")
         +icon("people", "25px")(class="me-2")
-        span.d-none.d-md-inline Контакты
+        span.d-none.d-xl-inline Контакты
